--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   mongo:
-    image: mongo:4.4
+    image: mongo
     container_name: mongodb
     restart: unless-stopped
     environment:
