--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -28,3 +28,11 @@ spring:
     host: localhost
     port: 6379
     password: ${REDIS_PASSWORD}
+
+  springdoc:
+    api-docs:
+      path: /v3/api-docs
+    swagger-ui:
+      path: /swagger-ui.html
+      operationsSorter: method
+      tagsSorter: alpha
